# AttysHRV

./: .gitmodules  LICENSE  README.md  filepath.cpp  genskybox.sh  link.txt  ocean_shader_example  ppmreader  ppmreader.cpp  scratch.txt  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: back.ppm  bottom.ppm  constant1.pcm  front.ppm  left.ppm  right.ppm  top.ppm  wave1.pcm  wave2.pcm  wave3.pcm  wave4.pcm  wave5.pcm
app/src/main/cpp/: AmbientAudio.cpp  AmbientAudio.h  AttysHRVGl.cpp  AttysHRVGl.h  AttysHRVXr.cpp  AttysHRVXr.h  CMakeLists.txt  OculusHRVGl.cpp  OculusHRVXr.cpp  SpatialAnchorGl.cpp  SpatialAnchorGl.h  SpatialAnchorXr.cpp  SpatialAnchorXr.h  VeraMoBd.h  XrInput.cpp  XrInput.h  attysjava2cpp.cpp  attysjava2cpp.h  ecg_rr_det.cpp  ecg_rr_det.h  engzee.h  native-lib.cpp  native-lib.h  spline.hpp  util.h
app/src/main/java/tech/glasgowneuro/attyshrv/: ANativeActivity.java
app/src/main/java/tech/glasgowneuro/oculusecg/: ANativeActivity.java  ECG_rr_det.java  MainActivity.java
app/src/main/java/tech/glasgowneuro/oculushrv/: ANativeActivity.java
app/src/main/res/raw/: constant2.pcm  wave1.pcm
app/src/main/res/values/: strings.xml
dettest/: CMakeLists.txt  Makefile  convert.py  test.cpp
docs/: index.html  privacy.html
gradle/wrapper/: gradle-wrapper.properties
plot/: plot_hr.py
webplot/: index.html  main.js  plotecg.css
